--- a/css/styles.css
+++ b/css/styles.css
@@ -3,19 +3,23 @@
 }
 
 .welcome {
-  padding: 10px;
+  padding: 0px;
+  margin: 0px;
   background-color: #f9f9f9;
 }
 
 img {
   float: left;
-  background-color: #f9f9f9;
+
 }
 
 .sidebar_links {
   list-style-type: none;
   background-color: #f9f9f9;
+  padding: 0px;
+  margin: 0px;
 }
 
 .welcome_links {
+  padding: 0px;
 }
